# Tasmota

./: .clang-format  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CHANGELOG.md  CMakeLists.txt  CODE_OWNERS.md  I2CDEVICES.md  Ninja.json  RELEASENOTES.md  es8311.be  es8311_driver.be  es8311_example.be  framework_install.py  index.html  package.json  platformio.ini  platformio_override.ini  platformio_override.ini.new  platformio_override_sample.ini  platformio_tasmota32.ini  platformio_tasmota_cenv.ini  platformio_tasmota_cenv.ini.new  platformio_tasmota_cenv_sample.ini  platformio_tasmota_core3_env.ini.off  platformio_tasmota_core3_env.ini.old  platformio_tasmota_core3_env_sample.ini  platformio_tasmota_env.ini  platformio_tasmota_env32.ini  sdkconfig.defaults  tas5805m-dac.be  tas5805m.be  test_Berry.be  tools.json
tasmota/: CMakeLists.txt  CMakeLists.txt.off  Powerwall.h  Tasmota_build_development.yml  Tasmota_build_master.yml  component.mk  homekit.c  idf_component.yml  my_user_config.h  support.ino  support_esp.ino  support_esp32.ino  support_features.ino  tasmota.ino  tasmota_compat.h  tasmota_configurations.h  tasmota_configurations_ESP32.h  tasmota_template.h  user_config_override.h  xdrv_01_webserver.ino  xdrv_10_scripter.ino  xdrv_13_display.ino  xdrv_14_mp3.ino  xdrv_23_zigbee_7_statemachine.ino  xdrv_23_zigbee_A_impl.ino  xdrv_47_BLE_ESP32.ino  xdrv_48_BLE_EQ3_TRV.ino  xdrv_50_filesystem.ino  xdrv_52_3_berry_MI32.ino  xdrv_81_esp32_webcam.ino  xdrv_84_core2.ino  xdsp_17_universal.ino  xsns_01_counter.ino  xsns_127_esp32_sensors.ino  xsns_45_vl53l0x.ino  xsns_52_ibeacon.ino  xsns_53_sml.ino  xsns_62_MI_ESP32_BLE_ESP32.ino  xsns_62_esp32_mi.h  xsns_62_esp32_mi.ino  (+4 more)
tasmota/displaydesc/: EK79007_P4ev_DSI.ini  ILI9488_display.ini  JD9165_DSI.ini
tasmota/include/: chacha_poly_ssh.h  ed25519.h  tasmota_configurations.h  tasmota_configurations_ESP32.h  tasmota_template.h  tasmota_types.h  tasmota_version.h
tasmota/language/: af_AF.h  bg_BG.h  ca_AD.h  cs_CZ.h  de_DE.h  el_GR.h  en_GB.h  es_ES.h  fr_FR.h  fy_NL.h  he_HE.h  hu_HU.h  ko_KO.h  nl_NL.h  pl_PL.h  pt_BR.h  pt_PT.h  ro_RO.h  ru_RU.h  sk_SK.h  sv_SE.h  tr_TR.h  uk_UA.h  vi_VN.h  zh_CN.h  zh_TW.h
tasmota/tasmota_support/: settings.ino  support.ino  support_command.ino  support_crash_recorder.ino  support_esp.ino  support_wifi.ino
tasmota/tasmota_xdrv_driver/: xdrv_01_9_webserver.ino  xdrv_02_9_mqtt.ino  xdrv_07_domoticz.ino  xdrv_07_ufs_domoticz.ino  xdrv_10_rules.ino  xdrv_10_scripter.ino  xdrv_17_rcswitch.ino  xdrv_23_zigbee_A_impl.ino  xdrv_28_pcf8574_v2.ino  xdrv_42_0_i2s_3_lib_idf51.ino  xdrv_42_0_i2s_audio.ino  xdrv_42_0_i2s_audio_idf51.ino  xdrv_50_filesystem.ino  xdrv_52_3_berry_crypto.ino  xdrv_52_9_berry.ino  (+9 more)
(+212 files in other folders)
